added section service-situation

--- a/tire-fitting.html
+++ b/tire-fitting.html
@@ -1151,7 +1151,6 @@
 			</div>
 		</section>
 
-
 		<section class="soc1al-proof section section--static-margin" aria-labelledby="soc1al-proof-title">
 			<h2 class="visually-hidden" id="soc1al-proof-title">Описание преимуществи и рейтинги 2АТМ</h2>
 
@@ -1490,7 +1489,7 @@
 			</div>
 		</section>
 
-		<section class="appointment-choose section section--extra-big-margin container"
+		<section class="appointment-choose section section--extra-big-to-medium-margin container"
 			aria-labelledby="appointment-choose-title">
 			<h2 class="visually-hidden">Выбор способа записи в мастерскую 2АТМ</h2>
 
@@ -1516,6 +1515,95 @@
 				</div>
 			</div>
 
+		</section>
+
+		<section class="service-situation section section--extra-big-to-medium-margin"
+			aria-labelledby="service-situation-title">
+			<h2 class="service-situation__title h3" id="service-situation-title">
+				Когда нужен шиномонтаж?
+			</h2>
+
+			<ul class="service-situation__list">
+				<li class="service-situation__list-item">
+					<svg class="service-situation__icon" width="32" height="33" viewBox="0 0 32 33">
+						<use xlink:href="./images/icons/sprite-icons.svg#pin-icon"></use>
+					</svg>
+
+					<div class="service-situation__stuation">
+						<h3 class="service-situation__stuation-name">
+							Прокол шины
+						</h3>
+
+						<div class="service-situation__stuation-deskription">
+							<p>
+								Для ремонта или замены шины
+							</p>
+						</div>
+					</div>
+				</li>
+
+				<li class="service-situation__list-item">
+					<svg class="service-situation__icon" width="32" height="33" viewBox="0 0 32 33">
+						<use xlink:href="./images/icons/sprite-icons.svg#tire-change-icon"></use>
+					</svg>
+
+					<div class="service-situation__stuation">
+						<h3 class="service-situation__stuation-name">
+							Сезонная замена резины
+						</h3>
+
+						<div class="service-situation__stuation-deskription">
+							<p>
+								Для безопасности и&nbsp;комфорта вождения
+							</p>
+						</div>
+					</div>
+				</li>
+
+				<li class="service-situation__list-item">
+					<svg class="service-situation__icon" width="32" height="33" viewBox="0 0 32 33">
+						<use xlink:href="./images/icons/sprite-icons.svg#vibration-icon"></use>
+					</svg>
+
+					<div class="service-situation__stuation">
+						<h3 class="service-situation__stuation-name">
+							Вибрация руля
+						</h3>
+
+						<div class="service-situation__stuation-deskription">
+							<p>
+								Для диагностики дисбаланса колес
+							</p>
+						</div>
+					</div>
+				</li>
+
+				<li class="service-situation__list-item">
+					<svg class="service-situation__icon" width="32" height="33" viewBox="0 0 32 33">
+						<use xlink:href="./images/icons/sprite-icons.svg#disk-destroy-icon"></use>
+					</svg>
+
+					<div class="service-situation__stuation">
+						<h3 class="service-situation__stuation-name">
+							Повреждение диска
+						</h3>
+
+						<div class="service-situation__stuation-deskription">
+							<p>
+								Для восстановления геометрии диска
+							</p>
+						</div>
+					</div>
+				</li>
+			</ul>
+
+			<div class="service-situation__subtitle section__subtitle">
+				<p>
+					В&nbsp;сети шиномонтажей &laquo;Две атмосферы&raquo; в&nbsp;Санкт-Петербурге мы&nbsp;быстро и&nbsp;качественно
+					устраним любые проблемы с&nbsp;вашими шинами и&nbsp;дисками! Мы&nbsp;предлагаем широкий комплекс работ
+					по&nbsp;сезонной смене резины, ремонту шин и&nbsp;дисков для легковых и&nbsp;коммерческих автомобилей.
+				</p>
+			</div>
 		</section>
 
 		<section class="when-work section container" aria-labelledby="when-work-title">
