added tire-fitting page

--- a/tire-fitting.html
+++ b/tire-fitting.html
@@ -9,7 +9,8 @@
 	<link rel="icon" type="image/svg+xml" sizes="32x32" href="./images/icons/favicon.svg">
 	<link rel="icon" type="image/svg+xml" sizes="48x48" href="./images/icons/favicon.svg">
 	<link rel="apple-touch-icon" sizes="180x180" href="./images/icons/favicon.svg">
-	<!-- <meta name="description" content=""> -->
+	<meta name="description"
+		content="Профессиональный шиномонтаж в СПб. Сезонная замена шин, балансировка, ремонт проколов и дисков. Современное оборудование, удобные адреса и круглосуточная работа">
 	<link rel="stylesheet" href="./libs/swiper/swiper-bundle.min.css">
 	<title>2ATM | Шиномонтаж</title>
 	<link rel="stylesheet" href="./styles/pages/tire-fitting-page/tire-fitting.css ">
@@ -1415,8 +1416,6 @@
 			</section>
 		</section>
 
-
-
 		<section class="advantages section section--big-margin container" aria-labelledby="advantages-title">
 			<h2 class="advantages__title section__title h3" id="advantages-title">
 				Наши преимущества
@@ -1606,7 +1605,7 @@
 			</div>
 		</section>
 
-		<section class="when-work section container" aria-labelledby="when-work-title">
+		<section class="when-work section section--margin-to-medium container" aria-labelledby="when-work-title">
 			<h2 class="visually-hidden">Когда можно записаться в 2АТМ</h2>
 			<div class="when-work__wrapper">
 				<div class="when-work__body">
@@ -1640,8 +1639,65 @@
 			</div>
 		</section>
 
-		<section class="other-services section section--big-to-medium-margin container"
-			aria-labelledby="other-services-title">
+		<section class="services-list section section" aria-labelledby="services-list-title">
+			<h2 class="services-list__title h3" id="services-list-title">
+				Все услуги шиномонтажа
+			</h2>
+
+			<nav class="services-list__nav">
+				<ul class="services-list__nav-list">
+					<li class="services-list__item">
+						<a class="services-list__link" href="#!" title="Подробнее об услуге">
+							Лазерный шиномонтаж
+						</a>
+					</li>
+
+					<li class="services-list__item">
+						<a class="services-list__link" href="#!" title="Подробнее об услуге">
+							Балансировка колес
+						</a>
+					</li>
+
+					<li class="services-list__item">
+						<a class="services-list__link" href="#!" title="Подробнее об услуге">
+							Ремонт шин
+						</a>
+					</li>
+
+					<li class="services-list__item">
+						<a class="services-list__link" href="#!" title="Подробнее об услуге">
+							сезонное хранение шин
+						</a>
+					</li>
+
+					<li class="services-list__item">
+						<a class="services-list__link" href="#!" title="Подробнее об услуге">
+							Ошиповка покрышек
+						</a>
+					</li>
+
+					<li class="services-list__item">
+						<a class="services-list__link" href="#!" title="Подробнее об услуге">
+							Установка системы давления в шинах
+						</a>
+					</li>
+
+					<li class="services-list__item">
+						<a class="services-list__link" href="#!" title="Подробнее об услуге">
+							покраска дисков
+						</a>
+					</li>
+
+					<li class="services-list__item">
+						<a class="services-list__link" href="#!" title="Подробнее об услуге">
+							Аргоновая сварка
+						</a>
+					</li>
+				</ul>
+			</nav>
+		</section>
+
+		<section class="other-services section container" aria-labelledby="other-services-title">
 			<h2 class="section__title h3" id="other-services-title">
 				Другие услуги
 			</h2>
@@ -1784,7 +1840,6 @@
 				</li>
 			</ul>
 		</section>
-
 	</main>
 
 	<footer class="footer">
@@ -1952,7 +2007,6 @@
 			},
 			breakpoints: {
 				1024: {
-					// simulateTouch: false,
 					spaceBetween: 24,
 				}
 			}
