create balance page. added new block-sections: reference ,cost-service and promo.

--- a/corporate.html
+++ b/corporate.html
@@ -22,7 +22,7 @@
 		<nav class="header-top-menu hidden-tablet">
 			<ul class="header-top-menu__list container">
 				<li>
-					<a class="header-top-menu__link header-top-menu__link--color-accent" href="#!">
+					<a class="header-top-menu__link header-top-menu__link--color-accent" href="./services.html">
 						Услуги
 					</a>
 				</li>
@@ -710,7 +710,7 @@
 					</li>
 
 					<li>
-						<a href="#!">Аренда и&nbsp;развитие</a>
+						<a href="./rental-develop.html">Аренда и&nbsp;развитие</a>
 					</li>
 				</ul>
 			</nav>
