--- a/tire-fitting.html
+++ b/tire-fitting.html
@@ -22,7 +22,7 @@
 		<nav class="header-top-menu hidden-tablet">
 			<ul class="header-top-menu__list container">
 				<li>
-					<a class="header-top-menu__link header-top-menu__link--color-accent" href="#!">
+					<a class="header-top-menu__link header-top-menu__link--color-accent" href="./services.html">
 						Услуги
 					</a>
 				</li>
@@ -1518,7 +1518,7 @@
 
 		<section class="service-situation section section--extra-big-to-medium-margin"
 			aria-labelledby="service-situation-title">
-			<h2 class="service-situation__title h3" id="service-situation-title">
+			<h2 class="section__title h3" id="service-situation-title">
 				Когда нужен шиномонтаж?
 			</h2>
 
@@ -1639,7 +1639,7 @@
 			</div>
 		</section>
 
-		<section class="services-list section section" aria-labelledby="services-list-title">
+		<section class="services-list section" aria-labelledby="services-list-title">
 			<h2 class="services-list__title h3" id="services-list-title">
 				Все услуги шиномонтажа
 			</h2>
@@ -1653,7 +1653,7 @@
 					</li>
 
 					<li class="services-list__item">
-						<a class="services-list__link" href="#!" title="Подробнее об услуге">
+						<a class="services-list__link" href="./balancing.html" title="Подробнее об услуге">
 							Балансировка колес
 						</a>
 					</li>
@@ -1895,7 +1895,7 @@
 					</li>
 
 					<li>
-						<a href="#!">Аренда и&nbsp;развитие</a>
+						<a href="./rental-develop.html">Аренда и&nbsp;развитие</a>
 					</li>
 				</ul>
 			</nav>
