--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<nav class="header-top-menu hidden-tablet">
 			<ul class="header-top-menu__list container">
 				<li>
-					<a class="header-top-menu__link header-top-menu__link--color-accent" href="#!">
+					<a class="header-top-menu__link header-top-menu__link--color-accent" href="./services.html">
 						Услуги
 					</a>
 				</li>
@@ -1827,9 +1827,6 @@
 					Выбирайте удобный способ!
 				</h3>
 
-
-
-
 				<div class="appointment-choose__buttons">
 					<a class="appointment-choose__button button" href="#!" target="_blank">
 						В&nbsp;Telegram
@@ -1897,7 +1894,7 @@
 					</li>
 
 					<li>
-						<a href="#!">Аренда и&nbsp;развитие</a>
+						<a href="./rental-develop.html">Аренда и&nbsp;развитие</a>
 					</li>
 				</ul>
 			</nav>
