--- a/offers.html
+++ b/offers.html
@@ -21,7 +21,7 @@
 		<nav class="header-top-menu hidden-tablet">
 			<ul class="header-top-menu__list container">
 				<li>
-					<a class="header-top-menu__link header-top-menu__link--color-accent" href="#!">
+					<a class="header-top-menu__link header-top-menu__link--color-accent" href="./services.html">
 						Услуги
 					</a>
 				</li>
@@ -441,7 +441,7 @@
 					</li>
 
 					<li>
-						<a href="#!">Аренда и&nbsp;развитие</a>
+						<a href="./rental-develop.html">Аренда и&nbsp;развитие</a>
 					</li>
 				</ul>
 			</nav>
