--- a/services.html
+++ b/services.html
@@ -22,7 +22,7 @@
 		<nav class="header-top-menu hidden-tablet">
 			<ul class="header-top-menu__list container">
 				<li>
-					<a class="header-top-menu__link header-top-menu__link--color-accent" href="#!">
+					<a class="header-top-menu__link header-top-menu__link--color-accent" href="./services.html">
 						Услуги
 					</a>
 				</li>
@@ -213,7 +213,7 @@
 							</li>
 
 							<li class="service__list-item">
-								<a class="service__link service__link--arrow" href="#!">
+								<a class="service__link service__link--arrow" href="./balancing.html">
 									<span>Балансировка колес</span>
 								</a>
 							</li>
@@ -586,7 +586,7 @@
 					</li>
 
 					<li>
-						<a href="#!">Аренда и&nbsp;развитие</a>
+						<a href="./rental-develop.html">Аренда и&nbsp;развитие</a>
 					</li>
 				</ul>
 			</nav>
