create tire-repair page. added section services-direction. update sections: promo ,cost-service ,reference.

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 									</a>
 								</li>
 								<li class="service__list-item">
-									<a class="service__link service__link--arrow" href="#!">
+									<a class="service__link service__link--arrow" href="./tire-repair.html">
 										<span>Ремонт шин</span>
 									</a>
 								</li>
@@ -1931,7 +1931,7 @@
 								</li>
 
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">Ремонт шин и&nbsp;дисков</a>
+									<a class="footer-svc-links__link" href="./tire-repair.html">Ремонт шин и&nbsp;дисков</a>
 								</li>
 
 								<li class="footer-svc-links__item">
