--- a/corporate.html
+++ b/corporate.html
@@ -747,7 +747,7 @@
 								</li>
 
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">Ремонт шин и&nbsp;дисков</a>
+									<a class="footer-svc-links__link" href="./tire-repair.html">Ремонт шин и&nbsp;дисков</a>
 								</li>
 
 								<li class="footer-svc-links__item">
