--- a/tire-fitting.html
+++ b/tire-fitting.html
@@ -700,7 +700,7 @@
 									<th>
 										Наименование работ/Стоимость, руб&nbsp;
 										<svg width="26" height="23" viewBox="0 0 26 23">
-											<use xlink:href="./images/icons/sprite-icons.svg#attantion-icon"></use>
+											<use xlink:href="./images/icons/sprite-icons.svg#attention-icon"></use>
 										</svg>
 									</th>
 									<th>R12</th>
@@ -1932,7 +1932,7 @@
 								</li>
 
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">Ремонт шин и&nbsp;дисков</a>
+									<a class="footer-svc-links__link" href="./tire-repair.html">Ремонт шин и&nbsp;дисков</a>
 								</li>
 
 								<li class="footer-svc-links__item">
