create tire-storage page. added section about-servicen. update sections: promo ,cost-service ,reference, advabtages

--- a/tire-repair.html
+++ b/tire-repair.html
@@ -312,7 +312,7 @@
 				</li>
 			</ul>
 
-			<div class="cost-service__buttons container">
+			<div class="cost-service__buttons">
 				<a class="cost-service__button button" href="#!">
 					Записаться в&nbsp;Telegram
 				</a>
@@ -502,7 +502,7 @@
 					</li>
 
 					<li class="services-list__item">
-						<a class="services-list__link" href="#!" title="Подробнее об услуге">
+						<a class="services-list__link" href="./tire-storage.html" title="Подробнее об услуге">
 							сезонное хранение шин
 						</a>
 					</li>
