--- a/addresses-card.html
+++ b/addresses-card.html
@@ -341,7 +341,7 @@
 							</li>
 
 							<li class="service__list-item">
-								<a class="service__link service__link--arrow" href="#!">
+								<a class="service__link service__link--arrow" href="./tire-storage.html">
 									<span>Сезонное хранение шин</span>
 								</a>
 							</li>
