--- a/services.html
+++ b/services.html
@@ -207,7 +207,7 @@
 
 						<ul class="services-menu__service-list service__list service__list--services-page">
 							<li class="service__list-item">
-								<a class="service__link service__link--arrow" href="#!">
+								<a class="service__link service__link--arrow" href="./tire-fitting.html">
 									<span>Шиномонтаж</span>
 								</a>
 							</li>
@@ -231,7 +231,7 @@
 							</li>
 
 							<li class="service__list-item">
-								<a class="service__link service__link--arrow" href="#!">
+								<a class="service__link service__link--arrow" href="./tire-storage.html">
 									<span>Сезонное хранение шин</span>
 								</a>
 							</li>
