--- a/tire-fitting.html
+++ b/tire-fitting.html
@@ -1665,7 +1665,7 @@
 					</li>
 
 					<li class="services-list__item">
-						<a class="services-list__link" href="#!" title="Подробнее об услуге">
+						<a class="services-list__link" href="./tire-storage.html" title="Подробнее об услуге">
 							сезонное хранение шин
 						</a>
 					</li>
