create tire-studding page. added sections: page-background-block ,explantion-info, about-tech. update sections: promo ,cost-service

--- a/corporate.html
+++ b/corporate.html
@@ -554,7 +554,7 @@
 
 				<li class="other-services__list-item other-service-card">
 					<a class="other-service-card__link" href="#!" aria-label="Перейти к описанию услуги"
-						title="Подробее о СТО ремонте">
+						title="Подробее об услуге">
 
 						<img class="other-service-card__image" src="./images/icons/icon-сar-rapair.webp" width="60" height="60"
 							alt="Шестерёнка" loading="lazy">
@@ -571,7 +571,7 @@
 
 				<li class="other-services__list-item other-service-card">
 					<a class="other-service-card__link" href="#!" aria-label="Перейти к описанию услуги"
-						title="Подробее о СТО ремонте">
+						title="Подробее об услуге">
 
 						<img class="other-service-card__image" src="./images/icons/icon-dry-cleaning.webp" width="60" height="60"
 							alt="Щётка" loading="lazy">
@@ -587,8 +587,8 @@
 				</li>
 
 				<li class="other-services__list-item other-service-card">
-					<a class="other-service-card__link" href="#!" aria-label="Перейти к описанию услуги"
-						title="Подробее о СТО ремонте">
+					<a class="other-service-card__link" href="./tire-studding.html" aria-label="Перейти к описанию услуги"
+						title="Подробее об услуге">
 
 						<img class="other-service-card__image" src="./images/icons/icon-studding.webp" width="60" height="60"
 							alt="Ошиповка шины" loading="lazy">
@@ -751,7 +751,7 @@
 								</li>
 
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">Ошиповка колес</a>
+									<a class="footer-svc-links__link" href="./tire-studding.html">Ошиповка колес</a>
 								</li>
 
 								<li class="footer-svc-links__item">
