--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 
 								</li>
 								<li class="service__list-item">
-									<a class="service__link service__link--arrow" href="#!">
+									<a class="service__link service__link--arrow" href="./tire-storage.html">
 										<span>Хранение шин</span>
 									</a>
 								</li>
@@ -266,7 +266,7 @@
 									</a>
 								</li>
 								<li class="service__list-item">
-									<a class="service__link service__link--arrow" href="#!">
+									<a class="service__link service__link--arrow" href="./tire-studding.html">
 										<span>Ошиповка шин</span>
 									</a>
 								</li>
@@ -1935,7 +1935,7 @@
 								</li>
 
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">Ошиповка колес</a>
+									<a class="footer-svc-links__link" href="./tire-studding.html">Ошиповка колес</a>
 								</li>
 
 								<li class="footer-svc-links__item">
