--- a/addresses-card.html
+++ b/addresses-card.html
@@ -302,7 +302,7 @@
 					<nav class="service">
 						<ul class="svc-catalog__list service__list">
 							<li class="service__list-item">
-								<a class="service__link service__link--arrow" href="#!">
+								<a class="service__link service__link--arrow" href="./tire-fitting.html">
 									<span>Шиномонтаж 24&nbsp;часа</span>
 								</a>
 							</li>
@@ -323,7 +323,7 @@
 							</li>
 
 							<li class="service__list-item">
-								<a class="service__link service__link--arrow" href="#!">
+								<a class="service__link service__link--arrow" href="./balancing.html">
 									<span>Балансировка колес</span>
 								</a>
 							</li>
@@ -335,7 +335,7 @@
 							</li>
 
 							<li class="service__list-item">
-								<a class="service__link service__link--arrow" href="#!">
+								<a class="service__link service__link--arrow" href="./tire-studding.html">
 									<span>Ошиповка шин</span>
 								</a>
 							</li>
@@ -875,7 +875,7 @@
 
 				<li class="other-services__list-item other-service-card">
 					<a class="other-service-card__link" href="#!" aria-label="Перейти к описанию услуги"
-						title="Подробее о СТО ремонте">
+						title="Подробее об услуге">
 
 						<img class="other-service-card__image" src="./images/icons/icon-сar-rapair.webp" width="60" height="60"
 							alt="Шестерёнка" loading="lazy">
@@ -892,7 +892,7 @@
 
 				<li class="other-services__list-item other-service-card">
 					<a class="other-service-card__link" href="#!" aria-label="Перейти к описанию услуги"
-						title="Подробее о СТО ремонте">
+						title="Подробее об услуге">
 
 						<img class="other-service-card__image" src="./images/icons/icon-dry-cleaning.webp" width="60" height="60"
 							alt="Щётка" loading="lazy">
@@ -908,8 +908,8 @@
 				</li>
 
 				<li class="other-services__list-item other-service-card">
-					<a class="other-service-card__link" href="#!" aria-label="Перейти к описанию услуги"
-						title="Подробее о СТО ремонте">
+					<a class="other-service-card__link" href="./tire-studding.html" aria-label="Перейти к описанию услуги"
+						title="Подробее об услуге">
 
 						<img class="other-service-card__image" src="./images/icons/icon-studding.webp" width="60" height="60"
 							alt="Ошиповка шины" loading="lazy">
@@ -1099,7 +1099,7 @@
 								</li>
 
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">Ошиповка колес</a>
+									<a class="footer-svc-links__link" href="./tire-studding.html">Ошиповка колес</a>
 								</li>
 
 								<li class="footer-svc-links__item">
