--- a/offer.html
+++ b/offer.html
@@ -382,7 +382,7 @@
 								</li>
 
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">Ошиповка колес</a>
+									<a class="footer-svc-links__link" href="./tire-studding.html">Ошиповка колес</a>
 								</li>
 
 								<li class="footer-svc-links__item">
