--- a/tire-fitting.html
+++ b/tire-fitting.html
@@ -1671,7 +1671,7 @@
 					</li>
 
 					<li class="services-list__item">
-						<a class="services-list__link" href="#!" title="Подробнее об услуге">
+						<a class="services-list__link" href="./tire-studding.html" title="Подробнее об услуге">
 							Ошиповка покрышек
 						</a>
 					</li>
@@ -1739,7 +1739,7 @@
 
 				<li class="other-services__list-item other-service-card">
 					<a class="other-service-card__link" href="#!" aria-label="Перейти к описанию услуги"
-						title="Подробее о СТО ремонте">
+						title="Подробее об услуге">
 
 						<img class="other-service-card__image" src="./images/icons/icon-сar-rapair.webp" width="60" height="60"
 							alt="Шестерёнка" loading="lazy">
@@ -1756,7 +1756,7 @@
 
 				<li class="other-services__list-item other-service-card">
 					<a class="other-service-card__link" href="#!" aria-label="Перейти к описанию услуги"
-						title="Подробее о СТО ремонте">
+						title="Подробее об услуге">
 
 						<img class="other-service-card__image" src="./images/icons/icon-dry-cleaning.webp" width="60" height="60"
 							alt="Щётка" loading="lazy">
@@ -1772,8 +1772,8 @@
 				</li>
 
 				<li class="other-services__list-item other-service-card">
-					<a class="other-service-card__link" href="#!" aria-label="Перейти к описанию услуги"
-						title="Подробее о СТО ремонте">
+					<a class="other-service-card__link" href="./tire-studding.html" aria-label="Перейти к описанию услуги"
+						title="Подробее об услуге">
 
 						<img class="other-service-card__image" src="./images/icons/icon-studding.webp" width="60" height="60"
 							alt="Ошиповка шины" loading="lazy">
@@ -1936,7 +1936,7 @@
 								</li>
 
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">Ошиповка колес</a>
+									<a class="footer-svc-links__link" href="./tire-studding.html">Ошиповка колес</a>
 								</li>
 
 								<li class="footer-svc-links__item">
