create disk-painting  page. update sections: promo ,cost-service, services-direction , page-background-block, aout-service , service-advantages

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="icon" type="image/svg+xml" sizes="48x48" href="./images/icons/favicon.svg">
 	<link rel="apple-touch-icon" sizes="180x180" href="./images/icons/favicon.svg">
 	<meta name="description"
-		content="Сеть автосервисов 2ATM в Санкт-Петербурге: шиномонтаж, развал-схождение, ТО, заправка кондиционеров. Запись через сайт или Telegram.">
+		content="Сеть шиномонтажей, автомоек и автосервисов в Санкт-Петербурге. Множество филиалов с онлайн-записью. Шиномонтаж, мойка, заправка кондиционеров, развал-схождение. Специальные предложения для клиентов.">
 	<link rel="stylesheet" href="./libs/swiper/swiper-bundle.min.css">
 	<title>2ATM | Главная</title>
 	<link rel="stylesheet" href="./styles/pages/index-page/index.css ">
@@ -1939,7 +1939,7 @@
 								</li>
 
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">Реставрация дисков</a>
+									<a class="footer-svc-links__link" href="./disk-painting.html">Реставрация дисков</a>
 								</li>
 
 								<li class="footer-svc-links__item">
