--- a/addresses-card.html
+++ b/addresses-card.html
@@ -312,12 +312,12 @@
 								</a>
 							</li>
 							<li class="service__list-item">
-								<a class="service__link service__link--arrow" href="#!">
+								<a class="service__link service__link--arrow" href="./disk-painting.html">
 									<span>Покраска дисков</span>
 								</a>
 							</li>
 							<li class="service__list-item">
-								<a class="service__link service__link--arrow" href="#!">
+								<a class="service__link service__link--arrow" href="./disk-painting.html">
 									<span>Ремонт дисков</span>
 								</a>
 							</li>
@@ -1103,7 +1103,7 @@
 								</li>
 
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">Реставрация дисков</a>
+									<a class="footer-svc-links__link" href="./disk-painting.html">Реставрация дисков</a>
 								</li>
 
 								<li class="footer-svc-links__item">
