--- a/services.html
+++ b/services.html
@@ -243,7 +243,7 @@
 							</li>
 
 							<li class="service__list-item">
-								<a class="service__link service__link--arrow" href="#!">
+								<a class="service__link service__link--arrow" href="./disk-painting.html">
 									<span>Покраска дисков</span>
 								</a>
 							</li>
@@ -631,7 +631,7 @@
 								</li>
 
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">Реставрация дисков</a>
+									<a class="footer-svc-links__link" href="./disk-painting.html">Реставрация дисков</a>
 								</li>
 
 								<li class="footer-svc-links__item">
