--- a/tire-fitting.html
+++ b/tire-fitting.html
@@ -1683,7 +1683,7 @@
 					</li>
 
 					<li class="services-list__item">
-						<a class="services-list__link" href="#!" title="Подробнее об услуге">
+						<a class="services-list__link" href="./disk-painting.html" title="Подробнее об услуге">
 							покраска дисков
 						</a>
 					</li>
@@ -1940,7 +1940,7 @@
 								</li>
 
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">Реставрация дисков</a>
+									<a class="footer-svc-links__link" href="./disk-painting.html">Реставрация дисков</a>
 								</li>
 
 								<li class="footer-svc-links__item">
