--- a/tire-repair.html
+++ b/tire-repair.html
@@ -520,7 +520,7 @@
 					</li>
 
 					<li class="services-list__item">
-						<a class="services-list__link" href="#!" title="Подробнее об услуге">
+						<a class="services-list__link" href="./disk-painting.html" title="Подробнее об услуге">
 							покраска дисков
 						</a>
 					</li>
@@ -811,7 +811,7 @@
 								</li>
 
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">Реставрация дисков</a>
+									<a class="footer-svc-links__link" href="./disk-painting.html">Реставрация дисков</a>
 								</li>
 
 								<li class="footer-svc-links__item">
