--- a/tire-studding.html
+++ b/tire-studding.html
@@ -167,7 +167,7 @@
 	</header>
 
 	<main class="content">
-		<h1 class="visually-hidden">Услуга ошиповки шин шин в 2АТМ</h1>
+		<h1 class="visually-hidden">Услуга ошиповки шин в 2АТМ</h1>
 
 		<section class="page-heading container" aria-labelledby="page-title">
 			<nav class="page-heading__breadcrumbs">
@@ -349,7 +349,7 @@
 					<source srcset="./images/about/about-tire-studding-mobile.webp" media="(max-width: 767px)" type="image/webp">
 					<source srcset="./images/about/about-tire-studding.webp 1x , ./images/about/about-tire-studding@2x.webp 2x"
 						type="image/webp">
-					<img class="about-service__image" src="./images/about/about-tire-studding.webp" alt="Шипованная резина"
+					<img class="about-service__image" src="./images/about/about-tire-studding-mobile.webp" alt="Шипованная резина"
 						width="360" height="257" loading="lazy">
 				</picture>
 
@@ -568,7 +568,7 @@
 					</li>
 
 					<li class="services-list__item">
-						<a class="services-list__link" href="#!" title="Подробнее об услуге">
+						<a class="services-list__link" href="./disk-painting.html" title="Подробнее об услуге">
 							покраска дисков
 						</a>
 					</li>
@@ -859,7 +859,7 @@
 								</li>
 
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">Реставрация дисков</a>
+									<a class="footer-svc-links__link" href="./disk-painting.html">Реставрация дисков</a>
 								</li>
 
 								<li class="footer-svc-links__item">
