create tire-pms page. update sections: promo ,cost-service, when-work,about-service. added section service-info

--- a/addresses-card.html
+++ b/addresses-card.html
@@ -293,7 +293,7 @@
 
 				<section class="address-info__svc-catalog svc-catalog">
 					<h3 class="address-info__block-name svc-catalog__title">
-						<img class="address-info__block-name-icon" src="./images/icons/icon-сar-rapair.webp" width="60" height="60"
+						<img class="address-info__block-name-icon" src="./images/icons/icon-car-repair.webp" width="60" height="60"
 							alt="Колесо" loading="lazy">
 
 						<span>Услуги</span>
@@ -877,7 +877,7 @@
 					<a class="other-service-card__link" href="#!" aria-label="Перейти к описанию услуги"
 						title="Подробее об услуге">
 
-						<img class="other-service-card__image" src="./images/icons/icon-сar-rapair.webp" width="60" height="60"
+						<img class="other-service-card__image" src="./images/icons/icon-car-repair.webp" width="60" height="60"
 							alt="Шестерёнка" loading="lazy">
 
 						<h3 class="other-service-card__name">
@@ -1119,7 +1119,7 @@
 								</li>
 
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">
+									<a class="footer-svc-links__link" href="./tire-pms.html">
 										Установка системы контроля давления в&nbsp;шинах
 									</a>
 								</li>
