--- a/disk-painting.html
+++ b/disk-painting.html
@@ -208,7 +208,7 @@
 					<source
 						srcset="./images/promo/disk-painting-promo-bg.webp 1x , ./images/promo/disk-painting-promo-bg@2x.webp 2x"
 						type="image/webp">
-					<img class="promo__main-image" src="./images/promo/disk-painting-promo-bg-mobile.webp" alt="Робот крамит диск"
+					<img class="promo__main-image" src="./images/promo/disk-painting-promo-bg-mobile.webp" alt="Робот красит диск"
 						width="419" height="336" loading="lazy">
 				</picture>
 			</div>
@@ -690,7 +690,7 @@
 					</li>
 
 					<li class="services-list__item">
-						<a class="services-list__link" href="#!" title="Подробнее об услуге">
+						<a class="services-list__link" href="./tire-pms.html" title="Подробнее об услуге">
 							Установка системы давления в шинах
 						</a>
 					</li>
@@ -789,7 +789,7 @@
 					<a class="other-service-card__link" href="#!" aria-label="Перейти к описанию услуги"
 						title="Подробее об услуге">
 
-						<img class="other-service-card__image" src="./images/icons/icon-сar-rapair.webp" width="60" height="60"
+						<img class="other-service-card__image" src="./images/icons/icon-car-repair.webp" width="60" height="60"
 							alt="Шестерёнка" loading="lazy">
 
 						<h3 class="other-service-card__name">
@@ -1004,7 +1004,7 @@
 								</li>
 
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">
+									<a class="footer-svc-links__link" href="./tire-pms.html">
 										Установка системы контроля давления в&nbsp;шинах
 									</a>
 								</li>
