--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 					<li class="services-menu__item services-menu__item--grid-cell-3 ">
 						<nav class="services-menu__service service">
 							<h4 class="services-menu__name service__name h4">
-								<img class="service__name-icon" src="./images/icons/icon-сar-rapair.webp" width="60" height="60"
+								<img class="service__name-icon" src="./images/icons/icon-car-repair.webp" width="60" height="60"
 									alt="Шестерёнка" loading="lazy">
 
 								<a class="service__link service__link--name" href="#!">
@@ -1955,7 +1955,7 @@
 								</li>
 
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">
+									<a class="footer-svc-links__link" href="./tire-pms.html">
 										Установка системы контроля давления в&nbsp;шинах
 									</a>
 								</li>
