--- a/corporate.html
+++ b/corporate.html
@@ -556,7 +556,7 @@
 					<a class="other-service-card__link" href="#!" aria-label="Перейти к описанию услуги"
 						title="Подробее об услуге">
 
-						<img class="other-service-card__image" src="./images/icons/icon-сar-rapair.webp" width="60" height="60"
+						<img class="other-service-card__image" src="./images/icons/icon-car-repair.webp" width="60" height="60"
 							alt="Шестерёнка" loading="lazy">
 
 						<h3 class="other-service-card__name">
@@ -771,7 +771,7 @@
 								</li>
 
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">
+									<a class="footer-svc-links__link" href="./tire-pms.html">
 										Установка системы контроля давления в&nbsp;шинах
 									</a>
 								</li>
