--- a/rental-develop.html
+++ b/rental-develop.html
@@ -361,7 +361,7 @@
 
 		<section class="pride-slogan pride-slogan--accent-bg section container">
 
-			<img class="pride-slogan__image" src="./images/icons/icon-сar-rapair.webp" width="60" height="60"
+			<img class="pride-slogan__image" src="./images/icons/icon-car-repair.webp" width="60" height="60"
 				alt="Шестерёнка 2АТМ" loading="lazy">
 
 			<h2 class="pride-slogan__text h4 pride-slogan__text--big">
@@ -770,7 +770,7 @@
 								</li>
 
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">
+									<a class="footer-svc-links__link" href="./tire-pms.html">
 										Установка системы контроля давления в&nbsp;шинах
 									</a>
 								</li>
