--- a/services.html
+++ b/services.html
@@ -225,7 +225,7 @@
 							</li>
 
 							<li class="service__list-item">
-								<a class="service__link service__link--arrow" href="#!">
+								<a class="service__link service__link--arrow" href="./tire-pms.html">
 									<span>Установка системы контроля давления</span>
 								</a>
 							</li>
@@ -295,7 +295,7 @@
 				<li class="services-menu__item services-menu__item--grid-cell-3">
 					<nav class="services-menu__service service">
 						<h3 class="services-menu__name service__name service__name--large-gap h4" id="service-сar-rapair">
-							<img class="service__name-icon" src="./images/icons/icon-сar-rapair.webp" width="60" height="60"
+							<img class="service__name-icon" src="./images/icons/icon-car-repair.webp" width="60" height="60"
 								alt="Шестерёнка" loading="lazy">
 
 							<a class="service__link service__link--name service__link--name-small" href="#!">
@@ -647,7 +647,7 @@
 								</li>
 
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">
+									<a class="footer-svc-links__link" href="./tire-pms.html">
 										Установка системы контроля давления в&nbsp;шинах
 									</a>
 								</li>
