--- a/tire-storage.html
+++ b/tire-storage.html
@@ -588,7 +588,7 @@
 					</li>
 
 					<li class="services-list__item">
-						<a class="services-list__link" href="#!" title="Подробнее об услуге">
+						<a class="services-list__link" href="./tire-pms.html" title="Подробнее об услуге">
 							Установка системы давления в шинах
 						</a>
 					</li>
@@ -652,7 +652,7 @@
 					<a class="other-service-card__link" href="#!" aria-label="Перейти к описанию услуги"
 						title="Подробее об услуге">
 
-						<img class="other-service-card__image" src="./images/icons/icon-сar-rapair.webp" width="60" height="60"
+						<img class="other-service-card__image" src="./images/icons/icon-car-repair.webp" width="60" height="60"
 							alt="Шестерёнка" loading="lazy">
 
 						<h3 class="other-service-card__name">
@@ -867,7 +867,7 @@
 								</li>
 
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">
+									<a class="footer-svc-links__link" href="./tire-pms.html">
 										Установка системы контроля давления в&nbsp;шинах
 									</a>
 								</li>
