--- a/disk-painting.html
+++ b/disk-painting.html
@@ -503,7 +503,7 @@
 		</section>
 
 		<section class="reference section section--static-margin container" aria-labelledby="reference-title">
-			<h2 class="visually-hidden" id="reference-title">Об ошиповке шин в 2АТМ</h2>
+			<h2 class="visually-hidden" id="reference-title">Об покраске дисков в 2АТМ</h2>
 
 			<div class="reference__text reference__text--small-text-mobile reference__text--semi-bold">
 				<p>
@@ -702,7 +702,7 @@
 					</li>
 
 					<li class="services-list__item">
-						<a class="services-list__link" href="#!" title="Подробнее об услуге">
+						<a class="services-list__link" href="./argon-welding.html" title="Подробнее об услуге">
 							Аргоновая сварка
 						</a>
 					</li>
@@ -871,7 +871,7 @@
 				</li>
 
 				<li class="other-services__list-item other-service-card">
-					<a class="other-service-card__link" href="#!" aria-label="Перейти к описанию услуги"
+					<a class="other-service-card__link" href="./argon-welding.html" aria-label="Перейти к описанию услуги"
 						title="Подробее о развале-схождении">
 
 						<img class="other-service-card__image" src="./images/icons/icon-welding.webp" width="60" height="60"
@@ -992,7 +992,7 @@
 								</li>
 
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">Аргоновая сварка</a>
+									<a class="footer-svc-links__link" href="./argon-welding.html">Аргоновая сварка</a>
 								</li>
 							</ul>
 						</li>
