--- a/offer.html
+++ b/offer.html
@@ -390,7 +390,7 @@
 								</li>
 
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">Аргоновая сварка</a>
+									<a class="footer-svc-links__link" href="./argon-welding.html">Аргоновая сварка</a>
 								</li>
 							</ul>
 						</li>
