--- a/services.html
+++ b/services.html
@@ -249,7 +249,7 @@
 							</li>
 
 							<li class="service__list-item">
-								<a class="service__link service__link--arrow" href="#!">
+								<a class="service__link service__link--arrow" href="./argon-welding.html">
 									<span>Аргоновая сварка</span>
 								</a>
 							</li>
@@ -635,7 +635,7 @@
 								</li>
 
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">Аргоновая сварка</a>
+									<a class="footer-svc-links__link" href="./argon-welding.html">Аргоновая сварка</a>
 								</li>
 							</ul>
 						</li>
