--- a/tire-pms.html
+++ b/tire-pms.html
@@ -183,7 +183,7 @@
 					</li>
 
 					<li class="page-heading__breadcrumbs-item">
-						<a class="page-heading__breadcrumbs-link" href="./disk-painting.html" tabindex="-1">
+						<a class="page-heading__breadcrumbs-link" href="./tire-pms.html" tabindex="-1">
 							Установка системы контроля давления в шинах
 						</a>
 					</li>
@@ -249,7 +249,7 @@
 
 		<section class="reference section section--extra-big-margin container hidden-mobile"
 			aria-labelledby="reference-title">
-			<h2 class="visually-hidden" id="reference-title">Об ошиповке шин в 2АТМ</h2>
+			<h2 class="visually-hidden" id="reference-title">О системе контроля давления в шинах в 2АТМ</h2>
 
 			<div class="reference__text reference__text--small-text-mobile reference__text--semi-bold">
 				<p>
@@ -287,9 +287,10 @@
 				</div>
 			</section>
 
-			<ul class="cost-service__list cost-service__list--static-margin cost-service__list--three-col">
+			<ul class="cost-service__list cost-service__list--static-margin">
 				<li>
-					<article class="service-cost-card service-cost-card--medium-padding service-cost-card--accent-bg">
+					<article
+						class="service-cost-card service-cost-card--gap-24 service-cost-card--medium-padding service-cost-card--accent-bg">
 						<img src="./images/icons/icon-car-repair.webp" width="60" height="60" alt="Шестерёнка" loading="lazy">
 
 						<div class="service-cost-card__text-big">
@@ -311,7 +312,8 @@
 				</li>
 
 				<li>
-					<article class="service-cost-card service-cost-card--medium-padding service-cost-card--accent-bg">
+					<article
+						class="service-cost-card service-cost-card--gap-24 service-cost-card--medium-padding service-cost-card--accent-bg">
 						<img src="./images/icons/icon-car-repair.webp" width="60" height="60" alt="Шестерёнка" loading="lazy">
 
 						<div class="service-cost-card__text-big">
@@ -332,7 +334,8 @@
 				</li>
 
 				<li>
-					<article class="service-cost-card service-cost-card--medium-padding service-cost-card--accent-bg">
+					<article
+						class="service-cost-card service-cost-card--gap-24 service-cost-card--medium-padding service-cost-card--accent-bg">
 						<img src="./images/icons/icon-car-repair.webp" width="60" height="60" alt="Шестерёнка" loading="lazy">
 
 						<div class="service-cost-card__text-big">
@@ -573,7 +576,7 @@
 					</li>
 
 					<li class="services-list__item">
-						<a class="services-list__link" href="#!" title="Подробнее об услуге">
+						<a class="services-list__link" href="./argon-welding.html" title="Подробнее об услуге">
 							Аргоновая сварка
 						</a>
 					</li>
@@ -744,7 +747,7 @@
 				</li>
 
 				<li class="other-services__list-item other-service-card">
-					<a class="other-service-card__link" href="#!" aria-label="Перейти к описанию услуги"
+					<a class="other-service-card__link" href="./argon-welding.html" aria-label="Перейти к описанию услуги"
 						title="Подробее о развале-схождении">
 
 						<img class="other-service-card__image" src="./images/icons/icon-welding.webp" width="60" height="60"
@@ -865,7 +868,7 @@
 								</li>
 
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">Аргоновая сварка</a>
+									<a class="footer-svc-links__link" href="./argon-welding.html">Аргоновая сварка</a>
 								</li>
 							</ul>
 						</li>
