--- a/tire-fitting.html
+++ b/tire-fitting.html
@@ -1689,7 +1689,7 @@
 					</li>
 
 					<li class="services-list__item">
-						<a class="services-list__link" href="#!" title="Подробнее об услуге">
+						<a class="services-list__link" href="./argon-welding.html" title="Подробнее об услуге">
 							Аргоновая сварка
 						</a>
 					</li>
@@ -1823,7 +1823,7 @@
 				</li>
 
 				<li class="other-services__list-item other-service-card">
-					<a class="other-service-card__link" href="#!" aria-label="Перейти к описанию услуги"
+					<a class="other-service-card__link" href="./argon-welding.html" aria-label="Перейти к описанию услуги"
 						title="Подробее о развале-схождении">
 
 						<img class="other-service-card__image" src="./images/icons/icon-welding.webp" width="60" height="60"
@@ -1944,7 +1944,7 @@
 								</li>
 
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">Аргоновая сварка</a>
+									<a class="footer-svc-links__link" href="./argon-welding.html">Аргоновая сварка</a>
 								</li>
 							</ul>
 						</li>
