edited promo block. home page

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
 			<div class="promo__content container">
 				<h3 class="promo__title h1" id="promo-title">
-					Быстрый шиномонтаж, сервис и&nbsp;мойка без очередей
+					Быстрый&nbsp;шиномонтаж, сервис и&nbsp;мойка без очередей
 				</h3>
 
 				<div class="promo__subtitle">
