create refill-conditioning page. update sections: promo ,cost-service, about-service

--- a/rental-develop.html
+++ b/rental-develop.html
@@ -65,7 +65,7 @@
 					<nav class="mobile-menu__box header-top-menu">
 						<ul class="header-top-menu__list">
 							<li>
-								<a class="mobile-menu__link mobile-menu__link--color-accent" href="#!">
+								<a class="mobile-menu__link mobile-menu__link--color-accent" href="./services.html">
 									Услуги
 								</a>
 							</li>
@@ -129,7 +129,7 @@
 					<a href="./car-service.html">Автосервис</a>
 				</li>
 				<li class="header-menu__item">
-					<a href="#!">Заправка кондиционеров</a>
+					<a href="./refill-conditioning.html">Заправка кондиционеров</a>
 				</li>
 
 				<li class="header-menu__item">
@@ -152,7 +152,7 @@
 						<a href="#!">Автомойка</a>
 					</li>
 					<li class="header-menu__item">
-						<a href="#!">Заправка кондиционеров</a>
+						<a href="./refill-conditioning.html">Заправка кондиционеров</a>
 					</li>
 					<li class="header-menu__item">
 						<a href="./car-service.html">Автосервис</a>
@@ -784,7 +784,7 @@
 								</li>
 
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">
+									<a class="footer-svc-links__link" href="./refill-conditioning.html">
 										Заправка кондиционеров
 									</a>
 								</li>
