--- a/offers.html
+++ b/offers.html
@@ -64,7 +64,7 @@
 					<nav class="mobile-menu__box header-top-menu">
 						<ul class="header-top-menu__list">
 							<li>
-								<a class="mobile-menu__link mobile-menu__link--color-accent" href="#!">
+								<a class="mobile-menu__link mobile-menu__link--color-accent" href="./services.html">
 									Услуги
 								</a>
 							</li>
@@ -128,7 +128,7 @@
 					<a href="./car-service.html">Автосервис</a>
 				</li>
 				<li class="header-menu__item">
-					<a href="#!">Заправка кондиционеров</a>
+					<a href="./refill-conditioning.html">Заправка кондиционеров</a>
 				</li>
 
 				<li class="header-menu__item">
@@ -151,7 +151,7 @@
 						<a href="#!">Автомойка</a>
 					</li>
 					<li class="header-menu__item">
-						<a href="#!">Заправка кондиционеров</a>
+						<a href="./refill-conditioning.html">Заправка кондиционеров</a>
 					</li>
 					<li class="header-menu__item">
 						<a href="./car-service.html">Автосервис</a>
@@ -516,7 +516,7 @@
 								</li>
 
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">
+									<a class="footer-svc-links__link" href="./refill-conditioning.html">
 										Заправка кондиционеров
 									</a>
 								</li>
