--- a/tire-repair.html
+++ b/tire-repair.html
@@ -63,7 +63,7 @@
 					<nav class="mobile-menu__box header-top-menu">
 						<ul class="header-top-menu__list">
 							<li>
-								<a class="mobile-menu__link mobile-menu__link--color-accent" href="#!">
+								<a class="mobile-menu__link mobile-menu__link--color-accent" href="./services.html">
 									Услуги
 								</a>
 							</li>
@@ -127,7 +127,7 @@
 					<a href="./car-service.html">Автосервис</a>
 				</li>
 				<li class="header-menu__item">
-					<a href="#!">Заправка кондиционеров</a>
+					<a href="./refill-conditioning.html">Заправка кондиционеров</a>
 				</li>
 
 				<li class="header-menu__item">
@@ -150,7 +150,7 @@
 						<a href="#!">Автомойка</a>
 					</li>
 					<li class="header-menu__item">
-						<a href="#!">Заправка кондиционеров</a>
+						<a href="./refill-conditioning.html">Заправка кондиционеров</a>
 					</li>
 					<li class="header-menu__item">
 						<a href="./car-service.html">Автосервис</a>
@@ -660,7 +660,7 @@
 				</li>
 
 				<li class="other-services__list-item other-service-card">
-					<a class="other-service-card__link" href="#!" aria-label="Перейти к описанию услуги"
+					<a class="other-service-card__link" href="./refill-conditioning.html" aria-label="Перейти к описанию услуги"
 						title="Подробее о заправке кондиционеров">
 
 						<img class="other-service-card__image" src="./images/icons/icon-refill-conditioning.webp" width="60"
@@ -841,7 +841,7 @@
 								</li>
 
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">
+									<a class="footer-svc-links__link" href="./refill-conditioning.html">
 										Заправка кондиционеров
 									</a>
 								</li>
