--- a/addresses.html
+++ b/addresses.html
@@ -133,7 +133,7 @@
 				</li>
 
 				<li class="header-menu__item">
-					<a href="#!">Развал-схождение</a>
+					<a href="./wheel-alignment.html">Развал-схождение</a>
 				</li>
 			</ul>
 		</nav>
@@ -802,7 +802,7 @@
 						<li>
 							<ul>
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">Развал-схождение</a>
+									<a class="footer-svc-links__link" href="./wheel-alignment.html">Развал-схождение</a>
 								</li>
 
 								<li class="footer-svc-links__item">
