--- a/disk-painting.html
+++ b/disk-painting.html
@@ -131,7 +131,7 @@
 				</li>
 
 				<li class="header-menu__item">
-					<a href="#!">Развал-схождение</a>
+					<a href="./wheel-alignment.html">Развал-схождение</a>
 				</li>
 			</ul>
 		</nav>
@@ -854,7 +854,7 @@
 				</li>
 
 				<li class="other-services__list-item other-service-card">
-					<a class="other-service-card__link" href="#!" aria-label="Перейти к описанию услуги"
+					<a class="other-service-card__link" href="./wheel-alignment.html" aria-label="Перейти к описанию услуги"
 						title="Подробее о развале-схождении">
 
 						<img class="other-service-card__image" src="./images/icons/icon-wheel-alignment.webp" width="60" height="60"
@@ -1014,7 +1014,7 @@
 						<li>
 							<ul>
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">Развал-схождение</a>
+									<a class="footer-svc-links__link" href="./wheel-alignment.html">Развал-схождение</a>
 								</li>
 
 								<li class="footer-svc-links__item">
