--- a/offer.html
+++ b/offer.html
@@ -132,7 +132,7 @@
 				</li>
 
 				<li class="header-menu__item">
-					<a href="#!">Развал-схождение</a>
+					<a href="./wheel-alignment.html">Развал-схождение</a>
 				</li>
 			</ul>
 		</nav>
@@ -412,7 +412,7 @@
 						<li>
 							<ul>
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">Развал-схождение</a>
+									<a class="footer-svc-links__link" href="./wheel-alignment.html">Развал-схождение</a>
 								</li>
 
 								<li class="footer-svc-links__item">
