--- a/services.html
+++ b/services.html
@@ -133,7 +133,7 @@
 				</li>
 
 				<li class="header-menu__item">
-					<a href="#!">Развал-схождение</a>
+					<a href="./wheel-alignment.html">Развал-схождение</a>
 				</li>
 			</ul>
 		</nav>
@@ -324,7 +324,7 @@
 							<img class="service__name-icon" src="./images/icons/icon-wheel-alignment.webp" width="60" height="60"
 								alt="Развал-схождение" loading="lazy">
 
-							<a class="service__link service__link--name service__link--name-small" href="#!">
+							<a class="service__link service__link--name service__link--name-small" href="./wheel-alignment.html">
 								Развал-схождение
 							</a>
 						</h3>
@@ -657,7 +657,7 @@
 						<li>
 							<ul>
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">Развал-схождение</a>
+									<a class="footer-svc-links__link" href="./wheel-alignment.html">Развал-схождение</a>
 								</li>
 
 								<li class="footer-svc-links__item">
