create car-wash page. update sections: promo ,cost-service, about-service

--- a/car-service.html
+++ b/car-service.html
@@ -122,7 +122,7 @@
 					<a href="./tire-fitting.html">Шиномонтаж</a>
 				</li>
 				<li class="header-menu__item">
-					<a href="#!">Автомойка</a>
+					<a href="./car-wash.html">Автомойка</a>
 				</li>
 				<li class="header-menu__item">
 					<a href="./car-service.html">Автосервис</a>
@@ -148,7 +148,7 @@
 						<a href="./tire-fitting.html">Шиномонтаж</a>
 					</li>
 					<li class="header-menu__item">
-						<a href="#!">Автомойка</a>
+						<a href="./car-wash.html">Автомойка</a>
 					</li>
 					<li class="header-menu__item">
 						<a href="./refill-conditioning.html">Заправка кондиционеров</a>
@@ -401,7 +401,7 @@
 								<span class="service-price-list__icon-block">
 									Стоимость,&nbsp;руб
 									<svg class="attention-info__icon hidden-mobile" width="33" height="34" viewBox="0 0 33 34">
-										<use xlink:href="./images/icons/sprite-icons.svg#attention-icon--padding"></use>
+										<use xlink:href="./images/icons/sprite-icons.svg#attention-icon-big"></use>
 									</svg>
 								</span>
 							</li>
@@ -527,7 +527,7 @@
 								<span class="service-price-list__icon-block">
 									Стоимость,&nbsp;руб
 									<svg class="attention-info__icon hidden-mobile" width="33" height="34" viewBox="0 0 33 34">
-										<use xlink:href="./images/icons/sprite-icons.svg#attention-icon--padding"></use>
+										<use xlink:href="./images/icons/sprite-icons.svg#attention-icon-big"></use>
 									</svg>
 								</span>
 							</li>
@@ -653,7 +653,7 @@
 								<span class="service-price-list__icon-block">
 									Стоимость,&nbsp;руб
 									<svg class="attention-info__icon hidden-mobile" width="33" height="34" viewBox="0 0 33 34">
-										<use xlink:href="./images/icons/sprite-icons.svg#attention-icon--padding"></use>
+										<use xlink:href="./images/icons/sprite-icons.svg#attention-icon-big"></use>
 									</svg>
 								</span>
 							</li>
@@ -779,7 +779,7 @@
 								<span class="service-price-list__icon-block">
 									Стоимость,&nbsp;руб
 									<svg class="attention-info__icon hidden-mobile" width="33" height="34" viewBox="0 0 33 34">
-										<use xlink:href="./images/icons/sprite-icons.svg#attention-icon--padding"></use>
+										<use xlink:href="./images/icons/sprite-icons.svg#attention-icon-big"></use>
 									</svg>
 								</span>
 							</li>
@@ -905,7 +905,7 @@
 								<span class="service-price-list__icon-block">
 									Стоимость,&nbsp;руб
 									<svg class="attention-info__icon hidden-mobile" width="33" height="34" viewBox="0 0 33 34">
-										<use xlink:href="./images/icons/sprite-icons.svg#attention-icon--padding"></use>
+										<use xlink:href="./images/icons/sprite-icons.svg#attention-icon-big"></use>
 									</svg>
 								</span>
 							</li>
@@ -1037,7 +1037,7 @@
 
 			<div class="attention-info">
 				<svg class="attention-info__icon" width="33" height="34" viewBox="0 0 33 34">
-					<use xlink:href="./images/icons/sprite-icons.svg#attention-icon--padding"></use>
+					<use xlink:href="./images/icons/sprite-icons.svg#attention-icon-big"></use>
 				</svg>
 
 				<div class="attention-info__text attention-info__text--static-fs">
@@ -1211,7 +1211,7 @@
 				</li>
 
 				<li class="other-services__list-item other-service-card">
-					<a class="other-service-card__link" href="#!" aria-label="Перейти к описанию услуги"
+					<a class="other-service-card__link" href="./car-wash.html" aria-label="Перейти к описанию услуги"
 						title="Подробее об автомойке">
 
 						<img class="other-service-card__image" src="./images/icons/icon-car-wash.webp" width="60" height="60"
@@ -1398,7 +1398,7 @@
 						<li>
 							<ul>
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">Автомойка</a>
+									<a class="footer-svc-links__link" href="./car-wash.html">Автомойка</a>
 								</li>
 
 								<li class="footer-svc-links__item">
