--- a/addresses-card.html
+++ b/addresses-card.html
@@ -123,7 +123,7 @@
 					<a href="./tire-fitting.html">Шиномонтаж</a>
 				</li>
 				<li class="header-menu__item">
-					<a href="#!">Автомойка</a>
+					<a href="./car-wash.html">Автомойка</a>
 				</li>
 				<li class="header-menu__item">
 					<a href="./car-service.html">Автосервис</a>
@@ -149,7 +149,7 @@
 						<a href="./tire-fitting.html">Шиномонтаж</a>
 					</li>
 					<li class="header-menu__item">
-						<a href="#!">Автомойка</a>
+						<a href="./car-wash.html">Автомойка</a>
 					</li>
 					<li class="header-menu__item">
 						<a href="./refill-conditioning.html">Заправка кондиционеров</a>
@@ -857,7 +857,7 @@
 				</li>
 
 				<li class="other-services__list-item other-service-card">
-					<a class="other-service-card__link" href="#!" aria-label="Перейти к описанию услуги"
+					<a class="other-service-card__link" href="./car-wash.html" aria-label="Перейти к описанию услуги"
 						title="Подробее об автомойке">
 
 						<img class="other-service-card__image" src="./images/icons/icon-car-wash.webp" width="60" height="60"
@@ -1071,7 +1071,7 @@
 						<li>
 							<ul>
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">Автомойка</a>
+									<a class="footer-svc-links__link" href="./car-wash.html">Автомойка</a>
 								</li>
 
 								<li class="footer-svc-links__item">
