--- a/offers.html
+++ b/offers.html
@@ -122,7 +122,7 @@
 					<a href="./tire-fitting.html">Шиномонтаж</a>
 				</li>
 				<li class="header-menu__item">
-					<a href="#!">Автомойка</a>
+					<a href="./car-wash.html">Автомойка</a>
 				</li>
 				<li class="header-menu__item">
 					<a href="./car-service.html">Автосервис</a>
@@ -148,7 +148,7 @@
 						<a href="./tire-fitting.html">Шиномонтаж</a>
 					</li>
 					<li class="header-menu__item">
-						<a href="#!">Автомойка</a>
+						<a href="./car-wash.html">Автомойка</a>
 					</li>
 					<li class="header-menu__item">
 						<a href="./refill-conditioning.html">Заправка кондиционеров</a>
@@ -454,7 +454,7 @@
 						<li>
 							<ul>
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">Автомойка</a>
+									<a class="footer-svc-links__link" href="./car-wash.html">Автомойка</a>
 								</li>
 
 								<li class="footer-svc-links__item">
