--- a/services.html
+++ b/services.html
@@ -123,7 +123,7 @@
 					<a href="./tire-fitting.html">Шиномонтаж</a>
 				</li>
 				<li class="header-menu__item">
-					<a href="#!">Автомойка</a>
+					<a href="./car-wash.html">Автомойка</a>
 				</li>
 				<li class="header-menu__item">
 					<a href="./car-service.html">Автосервис</a>
@@ -149,7 +149,7 @@
 						<a href="./tire-fitting.html">Шиномонтаж</a>
 					</li>
 					<li class="header-menu__item">
-						<a href="#!">Автомойка</a>
+						<a href="./car-wash.html">Автомойка</a>
 					</li>
 					<li class="header-menu__item">
 						<a href="./refill-conditioning.html">Заправка кондиционеров</a>
@@ -263,7 +263,8 @@
 							<img class="service__name-icon" src="./images/icons/icon-car-wash.webp" width="60" height="60"
 								alt="Мокрый автомобиль" loading="lazy">
 
-							<a class="service__link service__link--name service__link--name-small" href="#!">Автомойка</a>
+							<a class="service__link service__link--name service__link--name-small"
+								href="./car-wash.html">Автомойка</a>
 						</h3>
 
 						<ul class="services-menu__service-list service__list service__list--services-page">
@@ -599,7 +600,7 @@
 						<li>
 							<ul>
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">Автомойка</a>
+									<a class="footer-svc-links__link" href="./car-wash.html">Автомойка</a>
 								</li>
 
 								<li class="footer-svc-links__item">
