--- a/tire-repair.html
+++ b/tire-repair.html
@@ -121,7 +121,7 @@
 					<a href="./tire-fitting.html">Шиномонтаж</a>
 				</li>
 				<li class="header-menu__item">
-					<a href="#!">Автомойка</a>
+					<a href="./car-wash.html">Автомойка</a>
 				</li>
 				<li class="header-menu__item">
 					<a href="./car-service.html">Автосервис</a>
@@ -147,7 +147,7 @@
 						<a href="./tire-fitting.html">Шиномонтаж</a>
 					</li>
 					<li class="header-menu__item">
-						<a href="#!">Автомойка</a>
+						<a href="./car-wash.html">Автомойка</a>
 					</li>
 					<li class="header-menu__item">
 						<a href="./refill-conditioning.html">Заправка кондиционеров</a>
@@ -324,7 +324,7 @@
 
 			<div class="attention-info">
 				<svg class="attention-info__icon" width="33" height="34" viewBox="0 0 33 34">
-					<use xlink:href="./images/icons/sprite-icons.svg#attention-icon--padding"></use>
+					<use xlink:href="./images/icons/sprite-icons.svg#attention-icon-big"></use>
 				</svg>
 
 				<div class="attention-info__text">
@@ -592,7 +592,7 @@
 				</li>
 
 				<li class="other-services__list-item other-service-card">
-					<a class="other-service-card__link" href="#!" aria-label="Перейти к описанию услуги"
+					<a class="other-service-card__link" href="./car-wash.html" aria-label="Перейти к описанию услуги"
 						title="Подробее об автомойке">
 
 						<img class="other-service-card__image" src="./images/icons/icon-car-wash.webp" width="60" height="60"
@@ -779,7 +779,7 @@
 						<li>
 							<ul>
 								<li class="footer-svc-links__item">
-									<a class="footer-svc-links__link" href="#!">Автомойка</a>
+									<a class="footer-svc-links__link" href="./car-wash.html">Автомойка</a>
 								</li>
 
 								<li class="footer-svc-links__item">
